--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,3 +1,6 @@
+hr {
+  border: 1px dashed; }
+
 ul.topnav {
   align-items: center;
   background-color: black;
@@ -86,6 +89,37 @@ ul.topnav li.dropdownIcon {
 .about img {
   width: 100%; }
 
+.about-1, .about-2 {
+  display: block; }
+  .about-1 span p, .about-2 span p {
+    background-color: black;
+    color: white;
+    opacity: .8;
+    padding: 5px;
+    position: relative;
+    bottom: 0; }
+
+.about-desc {
+  padding-top: 10px; }
+
+.restaurant-hours {
+  background-color: black;
+  opacity: .8; }
+  .restaurant-hours h2 {
+    color: white;
+    padding-top: 10px;
+    text-align: center;
+    text-shadow: 0px 0px 3px black; }
+
+.hours {
+  padding: 40px; }
+  .hours .day-of-week {
+    color: red; }
+  .hours p {
+    color: white;
+    text-align: center;
+    text-shadow: 0px 0px 3px black; }
+
 @media only screen and (max-width: 320px) {
   ul.topnav {
     align-items: center; }
@@ -120,7 +154,13 @@ ul.topnav li.dropdownIcon {
     position: absolute;
     top: 0;
     right: 0;
-    padding-right: 10px; } }
+    padding-right: 10px; }
+
+  .about-items {
+    flex-direction: column; }
+
+  .menu h2 span, .about h2 span, .restaurant-hours h2 span {
+    display: none; } }
 @media only screen and (max-width: 480px) {
   ul.topnav {
     align-items: center; }
@@ -162,6 +202,12 @@ ul.topnav li.dropdownIcon {
     .menu-portion .menu-left {
       margin-bottom: 10px; }
       .menu-portion .menu-left img {
-        max-width: 100%; } }
+        max-width: 100%; }
+
+  .about-items {
+    flex-direction: column; }
+
+  .menu h2 span, .about h2 span, .restaurant-hours h2 span {
+    display: none; } }
 
 /*# sourceMappingURL=styles.css.map */
