--- a/src/static/css/styles.scss
+++ b/src/static/css/styles.scss
@@ -1,5 +1,8 @@
 @import "variables";
 
+hr {
+  border: 1px dashed;
+}
 // ################### NAVBAR #####################
 
 ul.topnav {
@@ -116,6 +119,48 @@ ul.topnav {
   }
 }
 
+.about-1, .about-2 {
+  display: block;
+  span {
+    p {
+      background-color: $nav-background-color;
+      color: $nav-anchor-color;
+      opacity: .8;
+      padding: 5px;
+      position: relative;
+      bottom: 0;
+    }
+  }
+}
+
+.about-desc {
+  padding-top: 10px;
+}
+
+// ################### HOURS #####################
+.restaurant-hours {
+  background-color: black;
+  opacity: .8;
+  h2 {
+    color: white;
+    padding-top: 10px;
+    text-align: center;
+    text-shadow: 0px 0px 3px black;
+  }
+}
+
+.hours {
+  padding: 40px;
+  .day-of-week {
+    color: red;
+  }
+  p {
+    color: white;
+    text-align: center;
+    text-shadow: 0px 0px 3px black;
+  }
+}
+
 // ################### MOBILE #####################
 
 @media only screen and (max-width: 320px) {
@@ -161,6 +206,19 @@ ul.topnav {
     right: 0;
     padding-right: $nav-padding;
   }
+
+  .about-items {
+    flex-direction: column;
+  }
+
+  .menu, .about, .restaurant-hours {
+    h2 {
+      span {
+        display:none;
+      }
+    }
+  }
+
 }
 
 @media only screen and (max-width: 480px) {
@@ -216,4 +274,17 @@ ul.topnav {
       }
     }
   }
+
+  .about-items{
+    flex-direction: column;
+  }
+
+  .menu, .about, .restaurant-hours {
+    h2 {
+      span {
+        display:none;
+      }
+    }
+  }
+
 }
