fixed css on large screen

--- a/src/static/css/_variables.scss
+++ b/src/static/css/_variables.scss
@@ -10,3 +10,21 @@ $nav-height: 40px;
 // ################### Menu #####################
 $menu-line-height: 30px;
 $menu-margin-top: 30px;
+$menu-padding-top: 40px;
+$menu-padding-bot: 40px;
+$menu-img-height: 14px;
+$menu-img-width: 75px;
+
+// ################### About #####################
+$about-padding-top: 40px;
+$about-margin: 10px;
+$about-div-padding: 5px;
+$about-desc-padding: 10px;
+
+// ################### HOURS #####################
+$hours-padding-top: 10px;
+$hours-padding: 40px;
+
+// ################### CONTACT #####################
+$contact-padding-top: 40px;
+$contact-text-color: white;
