--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,6 +1,9 @@
 hr {
   border: 1px dashed; }
 
+p {
+  font-family: 'Open Sans',sans-serif; }
+
 ul.topnav {
   align-items: center;
   background-color: black;
@@ -9,7 +12,11 @@ ul.topnav {
   font-size: 14px;
   height: 40px;
   justify-content: space-around;
-  opacity: 0.8; }
+  opacity: 0.8;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1; }
   ul.topnav li {
     list-style: none; }
     ul.topnav li a {
@@ -19,6 +26,24 @@ ul.topnav {
 ul.topnav li.dropdownIcon {
   display: none; }
 
+.carousel {
+  margin-top: 40px; }
+  .carousel .carousel-item-1 {
+    background-image: url("../images/image1.jpg");
+    background-position: center;
+    background-size: cover;
+    padding-bottom: 300px; }
+  .carousel .carousel-item-2 {
+    background-image: url("../images/image2.jpg");
+    background-position: center;
+    background-size: cover;
+    padding-bottom: 300px; }
+  .carousel .carousel-item-3 {
+    background-image: url("../images/image3.jpg");
+    background-position: center;
+    background-size: cover;
+    padding-bottom: 300px; }
+
 .menu {
   background-image: url("../images/bg-gray-in.jpg");
   background-repeat: no-repeat;
@@ -26,10 +51,13 @@ ul.topnav li.dropdownIcon {
   .menu h2 {
     font-family: 'Courgette';
     font-weight: 600;
+    padding-top: 40px;
     text-align: center; }
   .menu p {
-    font-family: 'Courgette';
     text-align: center; }
+
+.menu-portion {
+  padding-top: 40px; }
 
 .side-img {
   display: inline-block;
@@ -65,9 +93,13 @@ ul.topnav li.dropdownIcon {
 .menu-portion {
   display: flex;
   justify-content: space-around;
-  padding-bottom: 10px; }
+  padding-bottom: 40px; }
+  .menu-portion .menu-left {
+    display: block; }
   .menu-portion .menu-left img {
-    max-width: 600px; }
+    height: auto;
+    max-width: 100%;
+    margin: 0 auto; }
   .menu-portion .menu-text {
     line-height: 30px; }
     .menu-portion .menu-text p {
@@ -77,7 +109,8 @@ ul.topnav li.dropdownIcon {
     width: 100%; }
 
 .about h2 {
-  margin-top: 30px;
+  font-family: 'Courgette';
+  padding-top: 40px;
   text-align: center; }
 .about p {
   text-align: center; }
@@ -91,34 +124,82 @@ ul.topnav li.dropdownIcon {
 
 .about-1, .about-2 {
   display: block; }
-  .about-1 span p, .about-2 span p {
-    background-color: black;
-    color: white;
-    opacity: .8;
-    padding: 5px;
-    position: relative;
-    bottom: 0; }
+  .about-1 div, .about-2 div {
+    overflow: hidden;
+    position: relative; }
+  .about-1 span, .about-2 span {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    z-index: 9; }
+    .about-1 span p, .about-2 span p {
+      background-color: black;
+      color: white;
+      margin: 0;
+      opacity: 0.8;
+      padding: 5px;
+      bottom: 0; }
+  .about-1 img, .about-2 img {
+    height: auto;
+    max-width: 100%;
+    transform: scale(1.1); }
+    .about-1 img:hover, .about-2 img:hover {
+      transition: .35s;
+      transition-timing-function: ease-in;
+      transform: scale(1);
+      width: 100%; }
 
 .about-desc {
   padding-top: 10px; }
 
 .restaurant-hours {
-  background-color: black;
-  opacity: .8; }
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../images/bg-1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.8; }
   .restaurant-hours h2 {
     color: white;
-    padding-top: 10px;
+    font-family: 'Courgette';
+    padding-top: 40px;
     text-align: center;
     text-shadow: 0px 0px 3px black; }
 
 .hours {
-  padding: 40px; }
+  padding: 10px; }
   .hours .day-of-week {
     color: red; }
   .hours p {
     color: white;
     text-align: center;
     text-shadow: 0px 0px 3px black; }
+
+.contact {
+  background-color: black; }
+  .contact h2 {
+    color: white;
+    font-family: 'Courgette';
+    padding-top: 40px;
+    text-align: center;
+    text-shadow: 0px 0px 3px black; }
+  .contact p {
+    color: white;
+    text-align: center;
+    text-shadow: 0px 0px 3px black; }
+
+.contact-details {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 40px; }
+  .contact-details .contact-text p {
+    text-align: left; }
+  .contact-details .contact-text .contact-title {
+    color: red; }
+
+.contact-image img {
+  max-width: 100%; }
+
+.contact-location {
+  padding-bottom: 40px; }
 
 @media only screen and (max-width: 320px) {
   ul.topnav {
@@ -159,8 +240,11 @@ ul.topnav li.dropdownIcon {
   .about-items {
     flex-direction: column; }
 
-  .menu h2 span, .about h2 span, .restaurant-hours h2 span {
-    display: none; } }
+  .menu h2 span, .about h2 span, .restaurant-hours h2 span, .contact h2 span {
+    display: none; }
+
+  .contact-details {
+    flex-direction: column; } }
 @media only screen and (max-width: 480px) {
   ul.topnav {
     align-items: center; }
@@ -197,6 +281,9 @@ ul.topnav li.dropdownIcon {
     right: 0;
     top: 0; }
 
+  .menu-left img {
+    height: auto; }
+
   .menu-portion {
     flex-direction: column; }
     .menu-portion .menu-left {
@@ -207,7 +294,39 @@ ul.topnav li.dropdownIcon {
   .about-items {
     flex-direction: column; }
 
-  .menu h2 span, .about h2 span, .restaurant-hours h2 span {
-    display: none; } }
+  .menu h2 span, .about h2 span, .restaurant-hours h2 span, .contact h2 span {
+    display: none; }
+
+  .contact-details {
+    flex-direction: column; } }
+@media only screen and (max-width: 1024px) {
+  .menu-portion {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 10px; }
+    .menu-portion .menu-left img {
+      height: auto;
+      max-width: 100%; }
+    .menu-portion .menu-text {
+      line-height: 30px; }
+      .menu-portion .menu-text p {
+        flex-wrap: wrap;
+        margin-top: 30px;
+        text-align: left; }
+    .menu-portion .menu-btn button {
+      width: 100%; }
+
+  .about-1, .about-2 {
+    display: block; }
+    .about-1 span p, .about-2 span p {
+      background-color: black;
+      color: white;
+      opacity: 0.8;
+      padding: 5px;
+      position: relative;
+      bottom: 0; }
+    .about-1 img, .about-2 img {
+      max-height: 250px;
+      max-width: 100%; } }
 
 /*# sourceMappingURL=styles.css.map */
